# Book-shop

./: .flake8  .gitignore  Makefile  README.md  TODO  api.py  pyproject.toml  todo
apps/: __init__.py  urls.py
apps/shared/: model.py  paginations.py  utils.py
apps/shops/: admin.py  models.py  serializers.py  task.py  urls.py  views.py
apps/shops/fixtures/: country.json  user.json
apps/shops/migrations/: 0001_initial.py
apps/users/: admin.py  authentication.py  backend.py  email_service.py  forms.py  managers.py  models.py  serializer.py  serializers.py  task.py  urls.py  views.py
apps/users/management/commands/: generate_data.py  seeder_generate.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: email.html
doc_project/: doc  faker  need  todo
root/: celery.py  drf_settings.py  settings.py  urls.py
